--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -9,3 +9,14 @@ body{
     float: right;
     margin-bottom: 20px;
 }
+
+.media-object{
+    width: 30px;
+    height:30px;
+}
+
+.text-desc{
+    font-size:12px;
+    font-weight: normal;
+    color:#5e5e5e;
+}
