--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>SpringBoot版社区</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="css/community.css"/>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
@@ -13,12 +14,9 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">SpringBoot版社区</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="sr-only">DD社区</span>
             </button>
-            <a class="navbar-brand" href="#">SpringBoot版社区</a>
+            <a class="navbar-brand" href="/">DD社区</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -49,5 +47,32 @@
         </div>
     </div>
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                发现</h2>
+            <hr>
+            <div class="media" th:each="question : ${questions}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object  img-circle" th:src="${question.user.avatarUrl}"
+                             src="https://avatars0.githubusercontent.com/u/49863231?v=4">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading" th:text="${question.title}">怎么快速学会 Spring Boot </h4>
+                    <span th:text="${question.description}"></span><br>
+                    <span class="text-desc" ><span th:text="${question.commentCount}"></span> 个回复 ~
+                        <span th:text="${question.commentCount}"></span> 个 浏览 ~ <span th:text="${#dates.format(question.gmtCreate,'dd MMMM yyyy')}"></span> </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>热门话题</h3>
+        </div>
+    </div>
+</div>
 </body>
 </html>
