--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -14,12 +14,9 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">SpringBoot版社区</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="sr-only">DD社区</span>
             </button>
-            <a class="navbar-brand" href="#">SpringBoot版社区</a>
+            <a class="navbar-brand" href="#">DD社区</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,7 +45,7 @@
         </div>
     </div>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-check" aria-hidden="true"></span>
@@ -61,20 +58,18 @@
                     <input type="text" class="form-control" th:text="${title}" id="title" name="title" placeholder="问题标题__">
                 </div>
                 <div class="form-group">
-                    <label for="title">问题补充（必填，请参照右侧提示）</label>
+                    <label for="description">问题补充（必填，请参照右侧提示）</label>
                     <textarea type="text" class="form-control" th:text="${description}" id="description" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="title">添加标签：</label>
+                    <label for="tag">添加标签：</label>
                     <input type="text" class="form-control" th:text="${tag}" id="tag" name="tag" placeholder="输入标签，以，分隔符">
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                            <span class="alert alert-danger col-lg-3 col-md-12 col-sm-12 col-xs-12" th:text="${error}"></span>
-                        </div>
+                            <div class="alert alert-danger col-lg-3 col-md-12 col-sm-12 col-xs-12" th:text="${error}"></div>
                         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-                            <button type="submit" class="btn btn-default">发布</button>
+                            <button type="submit" class="btn btn-success btn-publish">发布</button>
                         </div>
                     </div>
                 </div>
