'profile和首页优化完成，问题controller未完成'

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,50 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta contxt="text/html;  charset=UTF-8" http-equiv="Content-Type">
+    <meta content="text/html;  charset=UTF-8" http-equiv="Content-Type">
     <title>发布--社区</title>
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="css/community.css"/>
+    <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body background-color="#efefef">
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">DD社区</span>
-            </button>
-            <a class="navbar-brand" href="#">DD社区</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索problem"><!--placeholder搜索框的提示-->
-                </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user != null}">
-                    <a href="/publish">发布</a>
-                </li>
-                <li class="dropdown" th:if="${session.user != null}">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getName()}">  <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-                        <li><a href="#">退出登录</a></li>
-                    </ul>
-                </li>
-                <li th:if="${session.user == null}"><a href="https://github.com/login/oauth/authorize?client_id=8282249c47b5c8ad111e&redirect_uri=http://localhost:8088/callback&scope=user&state=1">登录</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:insert="~{navigation.html ::  nav}"></div>
+<ul class="nav navbar-nav navbar-right">
+    <li th:if="${session.user != null}">
+        <a href="/publish">提问</a>
+    </li>
+    <!--<div th:text="${session}"></div>-->
+    <li class="dropdown" th:if="${session.user != null}">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+           aria-expanded="false" >
+            <span th:text="${session.user.getName()}"></span>
+            <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="/profile/questions">我的问题</a></li>
+            <li><a href="#">退出登录</a></li>
+        </ul>
+    </li>
+    <li th:if="${session.user == null}">
+        <a href="https://github.com/login/oauth/authorize?client_id=8282249c47b5c8ad111e&redirect_uri=http://localhost:8088/callback&scope=user&state=1">登录</a>
+    </li>
+</ul>
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -52,22 +39,30 @@
                 发起</h2>
             <hr>
 
-            <form action="/publish">
+            <form action="/publish" method="post">
+
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单概要）</label>
-                    <input type="text" class="form-control" th:text="${title}" id="title" name="title" placeholder="问题标题__">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题__">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充（必填，请参照右侧提示）</label>
-                    <textarea type="text" class="form-control" th:text="${description}" id="description" cols="30" rows="10"></textarea>
+                    <textarea class="form-control" th:text="${description}" name="description" id="description" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签：</label>
-                    <input type="text" class="form-control" th:text="${tag}" id="tag" name="tag" placeholder="输入标签，以，分隔符">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签，以，分隔符">
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
-                            <div class="alert alert-danger col-lg-3 col-md-12 col-sm-12 col-xs-12" th:text="${error}"></div>
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+
+                            <div class="alert alert-danger col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                                 th:text="${error}"
+                                 th:if="${error != null}">
+                            </div>
+                        </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <button type="submit" class="btn btn-success btn-publish">发布</button>
                         </div>
