--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -4,11 +4,11 @@
     <meta content="text/html;  charset=UTF-8" http-equiv="Content-Type">
     <title>发布--社区</title>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="css/community.css"/>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="/css/community.css"/>
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body background-color="#efefef">
 <div th:insert="~{navigation.html ::  nav}"></div>
@@ -40,7 +40,6 @@
             <hr>
 
             <form action="/publish" method="post">
-
                 <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单概要）</label>
@@ -70,7 +69,6 @@
                 </div>
             </form>
         </div>
-
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>问题发起指南</h3>
             • 问题标题: 请用精简的语言描述您发布的问题，不超过25字<br>
