--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -15,6 +15,33 @@ body{
     height:30px;
 }
 
+.media-body{
+    padding-top:10px;
+}
+
+.comment{
+    margin: 10px 0 10px 0;
+}
+
+.btn-comment{
+    float: right;
+    margin: 10px;
+}
+
+.comments{
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #999999;
+}
+
+.sub-comments {
+    border-radius: 5px;
+    margin-top: 10px;
+    border: 1px solid #eee;
+    padding-top: 15px;
+    margin-bottom: 15px;
+}
+
 .text-desc{
     font-size:12px;
     font-weight: normal;
@@ -26,7 +53,28 @@ body{
 .community-menu{
     color:#999;
     font-size: 13px;
+    display: block;
+    margin-bottom: 15px;
 }
 .jumbotron{
     margin: 30px;
+}
+.comment-sp{
+    margin-top: 0;
+}
+.menu{
+    color: #999999;
+    margin-top: 5px;
+}
+.menu .icon{
+    margin-right: 5px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .comment-icon {
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .icon :hover{
+    color: #2aabd2;
 }
