--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -28,14 +28,23 @@
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12" comment-sp/>
                 <!--内容-->
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+                <!--标签-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                   <span class="glyphicon glyphicon-tags question-tag" th:each="tag : ${question.tag.split(',')}">
+                        <a th:href="@{/(page=1,tag=${tag})}"
+                           th:text="${tag}" class="community-tag"></a>
+                   </span>
+                </div>
                 <!--编辑-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
-                   th:if="${session.user != null && session.user.id == question.creator}">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                       th:if="${session.user != null && session.user.id == question.creator}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑
                     </span>
-                </a>
+                    </a>
+                </div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp"/>
             </div>
             <!--回复-->
@@ -151,6 +160,11 @@
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
+                <ul class="question-related">
+                    <li th:each="related : ${relatedQuestions}">
+                        <a th:href="@{'/question/'+ ${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
